Seperated update user and update user's password
